[REMOVE] SendLua's to open keys and F4 menu. I don't even know why I had them there in the first place
[REMOVE] FindPlayerBySID, SID is the player's UserID, Player(SID) does exactly the same thing.
[REMOVE] Unused functions such as rp_paydaytime and FoodHeal
[REMOVE] Bannedprops/allowed props, it has been replaced by FPP.

DarkRP 2.4.1

[ADD] rp_ironshoot, set if people have to see through the ironsights to shoot
[ADD] Falco's Prop protection (FPP), reporting for duty to replace Simple Prop Protection!
[ADD] Anti tool model crash(FPP feature)
[ADD] An easy way to make normal entities
[ADD] CPPI for FPP
[ADD] rp_dropmoneyondeath and rp_deathfee, drop money when you die. Off by default
[ADD] Demote option in F4
[ADD] People now walk slow while in ironsight mode of weapon
[ADD] DarkRP skin for the VGUI's
[ADD] Language system, it's really easy to add languages to your DarkRP now! Thanks WoRmS for the danish translation, Donkie for Swedish!
[ADD] Signature to the letters/mails
[ADD] rp_startinghealth: Set the default health
[ADD] /addspawn and /removespawn: You can now add multiple team spawns and you can remove all the teamspawns from one team.
[ADD] Visible message when a lockdown is going on
[ADD] /me command
[ADD] rp_dropweaponondeath - Enable/disable whether people drop their current weapon when they die.
[FIX] Unable to remove door tool doors
[FIX] People with the admin privilege can now see the admin menu
[FIX] Hunger resetting after sleep
[FIX] Max microwaves
[FIX] rp_enforcemodels 0 not working correctly
[FIX] Unneccessary Database access on PlayerInitialSpawn(should save lag)
[FIX] Name exploit.
[FIX] People staying RP admin after having normal admin removed
[FIX] Errors when removing poopeemod
[FIX] Crash sometimes when changing team.
[FIX] Able to sprint after Arrest>sleep>wake up
[FIX] Tool restriction mods not working(Thanks Gorgorp!)
[FIX] Name exploit, names can now only contain letters and numbers.